--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -18,4 +18,7 @@
     <!-- Manage applications, package string displayed in app snippet -->
     <string name="packagename_text"><xliff:g id="package_name">%1$s</xliff:g></string>
 
+    <!-- DU version in About phone -->
+    <string name="rom_version_title">DU version</string>
+
 </resources>
