--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -21,4 +21,6 @@
     <!-- DU version in About phone -->
     <string name="rom_version_title">DU version</string>
 
+    <string name="fp_swipe_to_dismiss_notifications_title">Swipe fingerprint left or right to dismiss notifications</string>
+    <string name="fp_swipe_to_dismiss_notifications_summary">To dismiss your notifications, swipe left or right on the fingerprint sensor on the back of your phone.</string>
 </resources>
