Themes: make sure settings shortcut icons follow system accent
Change-Id: I88400b3ae2477c73ce16695f977974de45f7b44c

--- a/res/values/du_colors.xml
+++ b/res/values/du_colors.xml
@@ -19,4 +19,7 @@
     <!-- Themes -->
     <color name="homepage_du_themes_background">#FF5E35B1</color>
 
+    <!-- Shortcuts -->
+    <color name="icon_accent_custom">@*android:color/accent_device_default_light</color>
+
 </resources>
