--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -138,6 +138,24 @@
         android:fragment="com.android.settings.display.VrDisplayPreferencePicker" />
 
     <PreferenceCategory
+        android:key="theme_customization_category"
+        android:title="@string/theme_customization_category">
+
+        <ListPreference
+            android:key="android.theme.customization.accent_color"
+            android:title="@string/theme_customization_accent_color_title"/>
+
+        <ListPreference
+            android:key="android.theme.customization.font"
+            android:title="@string/theme_customization_font_title"/>
+
+        <ListPreference
+            android:key="android.theme.customization.adaptive_icon_shape"
+            android:title="@string/theme_customization_icon_shape_title"/>
+
+    </PreferenceCategory>
+
+    <PreferenceCategory
         android:key="density_category"
         android:title="@string/density_category">
 
