Enable dismissal feature on legacy suggestions.
Add back the close button for legacy suggestions.

Fixes: 140786274
Test: robotest
Change-Id: Iaf0376bd482db4c4ff7d04a68131071c29c01ced

--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -25,6 +25,9 @@
     <string name="du_themes_title">Themes</string>
     <string name="du_themes_summary">Life is like a box of crayons..</string>
 
+    <!-- Strings for suggestion card's close button [CHAR LIMIT=20] -->
+    <string name="suggestion_button_close">Close</string>
+
     <!-- Back gesture settings -->
     <string name="back_gesture_settings_dialog_title">Back gesture settings</string>
     <string name="back_gesture_sensitivity_dialog_message">Higher sensitivity may conflict with any app gestures along the edges of the screen.</string>
