AOSP Ambient music: Allow to pulse on new tracks [2/2]
Change-Id: Icc45ced8d5f0f071ecec6b9bfce981f2836a6677

--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -45,9 +45,12 @@
     <!-- Enable/Disable Screenshot sound -->
     <string name="screenshot_sound_title">Screenshot sounds</string>
 
-    <!-- Ambient Display wake gestures -->
+    <!-- Ambient Display wake gestures/music ticker -->
     <string name="ambient_wake_gestures_title">Ambient wake gestures</string>
     <string name="ambient_wake_gestures_summary">Show Ambient Display instead of normal lockscreen on wake gestures</string>
+    <string name="pulse_on_new_tracks_title">Ambient music ticker</string>
+    <string name="pulse_on_new_tracks_summary">Show Ambient Display when a new music track is played. Double tap on track info to skip to next track.</string>
+    <string name="pulse_on_new_tracks_soli_summary">Show Ambient Display when a new music track is played</string>
 
     <!-- Wake on plug -->
     <string name="wake_when_plugged_or_unplugged_title">Wake on plug</string>
