--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -31,6 +31,10 @@
     <!-- Back gesture settings -->
     <string name="back_gesture_settings_dialog_title">Back gesture settings</string>
     <string name="back_gesture_sensitivity_dialog_message">Higher sensitivity may conflict with any app gestures along the edges of the screen.</string>
+    <string name="back_gesture_area_dead_zone_title">Back area dead zone</string>
+    <string name="back_gesture_area_dead_zone_message">Set the area of the screen where the swipe can be triggered, to avoid conflicts with in-app gestures.</string>
+    <string name="smallest_tick_label">Full screen</string>
+    <string name="greatest_tick_label">Half screen</string>
     <string name="back_gesture_arrow_title">Back arrow animation</string>
     <string name="back_gesture_arrow_message">Hide arrow with back gesture</string>
     <string name="fp_swipe_to_dismiss_notifications_title">Swipe fingerprint left or right to dismiss notifications</string>
