Themes: Change strings
Change-Id: I36674eb04e7c275b95f65f491799a7ff89d65c3b

--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -38,6 +38,9 @@
     <string name="selinux_status_permissive">Permissive</string>
     <string name="selinux_status_enforcing">Enforcing</string>
 
+    <!-- Themes -->
+    <string name="theme_font_title">Font type</string>
+
     <!-- Enable/Disable Screenshot sound -->
     <string name="screenshot_sound_title">Screenshot sounds</string>
 
