--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -147,7 +147,7 @@
 
         <ListPreference
             android:key="android.theme.customization.font"
-            android:title="@string/theme_customization_font_title"/>
+            android:title="@string/theme_font_title"/>
 
         <ListPreference
             android:key="android.theme.customization.adaptive_icon_shape"
