--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -38,4 +38,7 @@
     <string name="selinux_status_permissive">Permissive</string>
     <string name="selinux_status_enforcing">Enforcing</string>
 
+    <!-- Enable/Disable Screenshot sound -->
+    <string name="screenshot_sound_title">Screenshot sounds</string>
+
 </resources>
