--- a/res/xml/sound_settings.xml
+++ b/res/xml/sound_settings.xml
@@ -179,6 +179,12 @@
           android:summary="@string/vibrate_on_touch_summary"
           settings:keywords="@string/keywords_vibrate_on_touch"/>
 
+        <!-- Enable/Disable Screenshot sound -->
+        <com.dirtyunicorns.support.preferences.SystemSettingSwitchPreference
+          android:key="screenshot_sound"
+          android:title="@string/screenshot_sound_title"
+          android:defaultValue="true" />
+
         <!-- Dock speaker plays -->
         <DropDownPreference
           android:key="dock_audio_media"
