Suggestions: Update the theme suggestion card
- Lets start using it for DU themes

Change-Id: I134cf71e3d7b66e60a0fbe4cad71fb36ba8178c4

--- a/res/values/du_config.xml
+++ b/res/values/du_config.xml
@@ -19,4 +19,8 @@
     <!-- Whether hardware revision should be shown or not. -->
     <bool name="config_show_hardware_revision">true</bool>
 
+    <!-- Customize your device -->
+    <string name="config_du_themes_package" translatable="false">com.dirtyunicorns.themes</string>
+    <string name="config_du_themes_class" translatable="false">com.dirtyunicorns.themes.MainActivity</string>
+
 </resources>
