--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -54,6 +54,10 @@
     <!-- Categories -->
     <string name="density_category">Density options</string>
 
+    <!-- Customize your device -->
+    <string name="custom_style_suggestion_title">Customize your device</string>
+    <string name="custom_style_suggestion_summary">Try different themes, fonts, and more</string>
+
     <!-- SELinux Status -->
     <string name="selinux_status">SELinux status</string>
     <string name="selinux_status_disabled">Disabled</string>
