--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -62,6 +62,18 @@
         android:summary="@string/summary_placeholder"
         settings:controller="com.android.settings.accounts.EmergencyInfoPreferenceController"/>
 
+    <!-- Changelog -->
+    <Preference
+        android:key="du_changelog"
+        android:order="15"
+        android:title="@string/du_changelog_title"
+        android:summary="@string/du_changelog_summary">
+        <intent
+            android:action="android.intent.action.MAIN"
+            android:targetPackage="com.android.settings"
+            android:targetClass="com.dirtyunicorns.changelog.MainActivity" />
+    </Preference>
+
     <!-- Legal information -->
     <!--Preference
         android:key="legal_container"
