Gesture nav: Improvements
- Remove the entire 'tweaks' category when not in use.
This makes more sense than yelling at the user or disabling preferences.

- Use our custom switch and category preferences to match system theme

Change-Id: I8252d40151a222b9cb5508620e4a7b85e15838ff

--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -66,12 +66,9 @@
     <string name="fp_swipe_to_dismiss_notifications_title">Swipe fingerprint left or right to dismiss notifications</string>
     <string name="fp_swipe_to_dismiss_notifications_summary">To dismiss your notifications, swipe left or right on the fingerprint sensor on the back of your phone.</string>
 
-    <!-- NavigationBar Gestural Mode Tweaks -->
-    <string name="navbar_gesture_mode_category_title">Gesture mode tweaks</string>
-    <string name="navbar_gesture_mode_category_key">gesture_mode_tweaks</string>
+    <!-- Full screen gestures -->
     <string name="navbar_gesture_pill_toggle_title">Full screen gestures</string>
     <string name="navbar_gesture_pill_toggle_summary">This will hide both the navigation bar and the pill for a seamless fullscreen gesture experience.</string>
-    <string name="navbar_gesture_pill_toggle_summary_disabled">This option is only available for gesture navigation!</string>
 
     <!-- Categories -->
     <string name="density_category">Density options</string>
