--- a/res/values-fr/du_strings.xml
+++ b/res/values-fr/du_strings.xml
@@ -68,6 +68,10 @@
     <string name="fp_swipe_to_dismiss_notifications_title">Ignorer les notifications</string>
     <string name="fp_swipe_to_dismiss_notifications_summary">Glisser vers la gauche ou la droite sur le capteur d\'empreintes digitales pour ignorer les notifications</string>
 
+    <!-- Full screen gestures -->
+    <string name="navbar_gesture_pill_toggle_title">Gestes en plein écran</string>
+    <string name="navbar_gesture_pill_toggle_summary">Masquer la barre de navigation et l\'icône</string>
+
     <!-- Categories -->
     <string name="density_category">Densité</string>
 
