--- a/res/xml/app_and_notification.xml
+++ b/res/xml/app_and_notification.xml
@@ -68,6 +68,17 @@
         <intent android:action="android.intent.action.MANAGE_PERMISSIONS"/>
     </Preference>
 
+    <!-- DU Notifier -->
+    <Preference
+        android:key="du_notifier"
+        android:title="@string/du_notifier_title"
+        android:summary="@string/du_notifier_summary"
+        settings:controller="com.android.settings.applications.DuNotifierPreferenceController">
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.dirtyunicorns.notifier"
+            android:targetClass="com.dirtyunicorns.notifier.MainActivity" />
+    </Preference>
+
     <com.android.settingslib.RestrictedPreference
         android:key="app_and_notif_cell_broadcast_settings"
         android:title="@string/cell_broadcast_settings"
