Gestures: consolidate resources
Change-Id: I82b462fd2da16043f1442c7ae7fea64fcf2d6f03

--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -105,9 +105,8 @@
     <string name="vibration_on_charge_state_changed_title">Vibrate on USB plug</string>
 
     <!-- Long swipe gestures -->
-    <string name="navbar_gesture_tweaks_pref_title">Advanced gestures</string>
+    <string name="navbar_gesture_tweaks_pref_title">Custom gestures</string>
     <string name="navbar_gesture_tweaks_pref_summary">Customize gestures and set custom actions</string>
-    <string name="navbar_gesture_tweaks_cat_title">Advanced</string>
     <string name="long_back_swipe_timeout_title">Long swipe action timeout</string>
     <string name="left_swipe_actions_title">Long left swipe action</string>
     <string name="left_swipe_app_action_title">Select long left swipe app</string>
