--- a/res/xml/my_device_info.xml
+++ b/res/xml/my_device_info.xml
@@ -67,7 +67,8 @@
         android:key="du_changelog"
         android:order="15"
         android:title="@string/du_changelog_title"
-        android:summary="@string/du_changelog_summary">
+        android:summary="@string/du_changelog_summary"
+        settings:controller="com.android.settings.deviceinfo.ChangelogPreferenceController">
         <intent
             android:action="android.intent.action.MAIN"
             android:targetPackage="com.android.settings"
