Notification log improvements
Change-Id: I5d50070c11d4d1d0a4e1bb2be53e61929ebe1d1d

--- a/res/values/du_strings.xml
+++ b/res/values/du_strings.xml
@@ -104,4 +104,7 @@
     <!-- Vibrate on plug -->
     <string name="vibration_on_charge_state_changed_title">Vibrate on USB plug</string>
 
+    <!-- Notification log -->
+    <string name="notification_log_summary">Show notifications history log</string>
+
 </resources>
