Add Touch Sensitivity functionality
Change-Id: I64650f9b0406bf8bd7581b316b56bd82d37575fa

--- a/res/values/du_config.xml
+++ b/res/values/du_config.xml
@@ -23,4 +23,7 @@
     <string name="config_du_themes_package" translatable="false">com.dirtyunicorns.themes</string>
     <string name="config_du_themes_class" translatable="false">com.dirtyunicorns.themes.MainActivity</string>
 
+    <!-- Whether to display touch sensitivity switch -->
+    <bool name="config_show_touch_sensitivity">false</bool>
+
 </resources>
